[gd_scene load_steps=5 format=2]

[ext_resource path="res://board.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://turn_tip_marker.png" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="board" type="Sprite" parent="."]
position = Vector2( 331.826, 304.172 )
scale = Vector2( 1.32374, 1.32374 )
texture = ExtResource( 1 )

[node name="board_origin" type="Position2D" parent="."]
position = Vector2( 119.345, 543.047 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_btn" type="TextureButton" parent="HUD/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
texture_normal = ExtResource( 3 )

[node name="turn_tip_1" type="Sprite" parent="."]
visible = false
position = Vector2( 625.502, 160.253 )
texture = ExtResource( 4 )

[node name="turn_tip_0" type="Sprite" parent="."]
visible = false
position = Vector2( 625.502, 427.771 )
texture = ExtResource( 4 )
[connection signal="pressed" from="HUD/MarginContainer/play_btn" to="." method="_on_play_btn_pressed"]
